--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,8 @@
     "sourceType": "module"
   },
   "env": {
-    "es6": true
+    "es6": true,
+    "commonjs": true,
+    "shared-node-browser": true
   }
 }
