--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "es2015-library-skeleton",
+  "name": "chai-wait-for",
   "version": "0.0.0-development",
-  "description": "my personal ES2015 library project skeleton",
+  "description": "poll until an assertion succeeds",
   "main": "index.js",
   "sideEffects": false,
   "scripts": {
@@ -61,17 +61,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jedwards1211/es2015-library-skeleton.git"
+    "url": "https://github.com/jcoreio/chai-wait-for.git"
   },
   "keywords": [
-    "es2015"
+    "chai",
+    "wait",
+    "await",
+    "async",
+    "async-await",
+    "poll",
+    "assertion",
+    "retry"
   ],
   "author": "Andy Edwards",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jedwards1211/es2015-library-skeleton/issues"
+    "url": "https://github.com/jcoreio/chai-wait-for/issues"
   },
-  "homepage": "https://github.com/jedwards1211/es2015-library-skeleton#readme",
+  "homepage": "https://github.com/jcoreio/chai-wait-for#readme",
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
@@ -92,6 +99,9 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-istanbul": "^6.0.0",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-subset": "^1.6.0",
+    "chai-webdriverio-async": "^2.0.0",
     "codecov": "^3.8.1",
     "copy": "^0.3.2",
     "cross-env": "^7.0.3",
@@ -108,7 +118,8 @@
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.3.0"
+    "semantic-release": "^17.3.0",
+    "sinon": "^9.2.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5"
