--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "husky": "^4.3.6",
     "istanbul": "^0.4.5",
     "lint-staged": "^10.5.3",
+    "lodash": "^4.17.20",
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
     "prettier": "^2.2.1",
