--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
   },
   "homepage": "https://github.com/jcoreio/chai-wait-for#readme",
   "devDependencies": {
-    "@jcoreio/toolchain": "^3.2.0",
-    "@jcoreio/toolchain-circle": "^3.2.0",
-    "@jcoreio/toolchain-esnext": "^3.2.0",
-    "@jcoreio/toolchain-mocha": "^3.2.0",
-    "@jcoreio/toolchain-semantic-release": "^3.2.0",
-    "@jcoreio/toolchain-typescript": "^3.2.0",
+    "@jcoreio/eslint-plugin-implicit-dependencies": "^1.1.1",
+    "@jcoreio/toolchain": "^3.10.1",
+    "@jcoreio/toolchain-circle": "^3.10.1",
+    "@jcoreio/toolchain-esnext": "^3.10.1",
+    "@jcoreio/toolchain-mocha": "^3.10.1",
+    "@jcoreio/toolchain-semantic-release": "^3.10.1",
+    "@jcoreio/toolchain-typescript": "^3.10.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
-    "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
     "chai-subset": "^1.6.0",
     "chai-webdriverio-async": "^2.0.0",
@@ -46,6 +46,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-no-only-tests": "^3.1.0",
     "lodash": "^4.17.20",
     "mocha": "^10.2.0",
     "rimraf": "^3.0.2",
@@ -54,7 +55,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.18.6",
-    "@types/chai": "^4.3.10"
+    "@types/chai": "^4.3.10",
+    "chai": "^4.3.7"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -67,5 +69,5 @@
   "engines": {
     "node": ">=16"
   },
-  "packageManager": "pnpm@8.3.1"
+  "packageManager": "pnpm@8.11.0"
 }
