--- a/package.json
+++ b/package.json
@@ -31,20 +31,20 @@
   "homepage": "https://github.com/jcoreio/chai-wait-for#readme",
   "devDependencies": {
     "@jcoreio/eslint-plugin-implicit-dependencies": "^1.1.1",
-    "@jcoreio/toolchain": "^3.10.1",
-    "@jcoreio/toolchain-circle": "^3.10.1",
-    "@jcoreio/toolchain-esnext": "^3.10.1",
-    "@jcoreio/toolchain-mocha": "^3.10.1",
-    "@jcoreio/toolchain-semantic-release": "^3.10.1",
-    "@jcoreio/toolchain-typescript": "^3.10.1",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
+    "@jcoreio/toolchain": "^4.12.4",
+    "@jcoreio/toolchain-circle": "^4.12.4",
+    "@jcoreio/toolchain-esnext": "^4.12.4",
+    "@jcoreio/toolchain-mocha": "^4.12.4",
+    "@jcoreio/toolchain-semantic-release": "^4.12.4",
+    "@jcoreio/toolchain-typescript": "^4.12.4",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
     "chai-as-promised": "^7.1.1",
     "chai-subset": "^1.6.0",
     "chai-webdriverio-async": "^2.0.0",
     "copy": "^0.3.2",
     "cross-env": "^7.0.3",
-    "eslint": "^8.43.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "lodash": "^4.17.20",
@@ -69,5 +69,8 @@
   "engines": {
     "node": ">=16"
   },
-  "packageManager": "pnpm@8.11.0"
+  "packageManager": "pnpm@8.11.0",
+  "@jcoreio/toolchain": {
+    "migratedVersion": "4.12.4"
+  }
 }
